# code_runner

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
agent-runner/: Dockerfile  README.md  pyproject.toml
agent-runner/app/: auth.py  executor.py  hooks.py  main.py  settings.py
agent-runner/app/routers/: exec.py  health.py
agent-runner/tests/: test_executor.py  test_hooks.py  test_routes.py
orchestrator-api/: Dockerfile  README.md  main.py  pyproject.toml
orchestrator-api/app/: bootstrap.py  main.py  settings.py
orchestrator-api/app/auth/: dependencies.py  rate_limit.py  router.py  sessions.py
orchestrator-api/app/blockers/: __init__.py  models.py  store.py
orchestrator-api/app/config/: loader.py  schema.py
orchestrator-api/app/db/: migrations.py  store.py
orchestrator-api/app/engine/: __init__.py  escalation.py  implement_loop.py  markers.py  profile_generation.py  recovery.py  review_cycle.py  run_manager.py  scheduler.py  wave_driver.py
orchestrator-api/app/gates/: __init__.py  runner.py
orchestrator-api/app/git/: __init__.py  agent_branch.py  errors.py  feature_branch.py  merge_queue.py  recovery.py  repo.py
orchestrator-api/app/github/: __init__.py  client.py  errors.py  models.py
orchestrator-api/app/handoff/: __init__.py  body.py  engine.py  models.py
orchestrator-api/app/notifications/: __init__.py  channel.py  dispatcher.py  factory.py  resend.py  telegram.py  telegram_commands.py  telegram_inbound.py
orchestrator-api/app/notion/: __init__.py  client.py  errors.py  models.py
orchestrator-api/app/observability/: capture.py  langfuse_emitter.py  models.py  reports.py  retention.py  rollup.py
orchestrator-api/app/personas/: __init__.py  composer.py  loader.py  models.py
orchestrator-api/app/profile/: __init__.py  loader.py  schema.py
orchestrator-api/app/progress/: bus.py
orchestrator-api/app/providers/: __init__.py  adapter.py  claude.py  codex.py  executor_client.py  gemini.py  hooks.py  pricing.py  types.py  utils.py
orchestrator-api/app/renderer/: __init__.py  agents.py  base.py  claude.py  pipeline.py
orchestrator-api/app/routers/: blockers.py  config.py  health.py  profile.py  progress.py  prs.py  reports.py  runs.py  usage.py
orchestrator-api/app/secrets/: resolver.py
orchestrator-api/app/skills/: __init__.py  loader.py  models.py
orchestrator-api/app/sync/: __init__.py  mirror.py  social_context.py
orchestrator-api/app/usage/: __init__.py  api_reader.py  cap_stepper.py  models.py  monitor.py  pause.py  policy.py  reader.py  subscription.py  threshold.py
orchestrator-api/app/wave/: __init__.py  assembly.py  reader.py
orchestrator-api/tests/: test_agent_branch.py  test_api_reader.py  test_arch_merge_guard.py  test_arch_sandboxed_execution.py  test_auth.py  test_blockers.py  test_blockers_api.py  test_bootstrap.py  test_cap_stepper.py  test_capture.py  test_channels.py  test_claude_adapter.py  test_codex_adapter.py  test_config.py  test_config_api.py  test_db.py  test_escalation.py  test_executor_client.py  test_feature_branch.py  test_gates.py  test_gemini_adapter.py  test_git.py  test_github.py  test_handoff.py  test_hooks.py  test_implement_loop.py  test_langfuse_emitter.py  test_markers.py  test_mirror_sync.py  test_monitor.py  test_notifications.py  test_notion.py  test_pause.py  test_persona_loader.py  test_personas.py  test_placeholder.py  test_policy.py  test_pricing.py  test_profile.py  test_profile_api.py  (+23 more)
(+76 files in other folders)
