[project]
name = "agent-runner"
version = "0.1.0"
description = "Code Runner sandboxed tool-execution service (Spec §7.1, §7.2)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pyright>=1.1",
    "ruff>=0.9",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["app", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
