[project]
name = "orchestrator-api"
version = "0.1.0"
description = "Code Runner orchestration engine — FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111.0",
    "argon2-cffi>=23.1",
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
    "pyright>=1.1",
    "ruff>=0.9",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["app"]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
